--- a/MeniuPrincipal/meniu_principal.css
+++ b/MeniuPrincipal/meniu_principal.css
@@ -28,6 +28,11 @@ body {
     padding-bottom: 0;
 }
 
+.navbar-toggler:focus {
+    outline: none;
+    box-shadow: none;
+}
+
 /* Aplică stiluri specifice pentru ecrane mai mari */
 @media (min-width: 992px) {
     .logo-outside {
@@ -49,11 +54,37 @@ body {
     }
 }
 
+.navbar-nav .nav-link {
+    position: relative;
+    transition: all 0.3s ease;
+}
+
+/* Stilizează link-urile din navbar */
+.navbar-nav .nav-link:hover::after,
+.navbar-nav .nav-link:focus::after {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    transition: all 0.3s ease;
+}
+
+/* Inițializează linia sub link */
+.navbar-nav .nav-link::after {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    width: 0%;
+    height: 2px;
+    background-color: #fff; /* Culoarea liniei */
+    transition: width 0.3s ease, left 0.3s ease; /* Animatie pentru a lărgi linia */
+}
+
 .navbar-toggler {
     border: none;
 }
 
-.navbar-toggler-icon {
-    color: #fff;
-    font-size: 1.5rem;
-}
