--- a/MeniuPrincipal/meniu_principal.css
+++ b/MeniuPrincipal/meniu_principal.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -86,5 +88,169 @@ body {
 
 .navbar-toggler {
     border: none;
+}
+
+.card {
+    border: 1px solid #000;
+    border-radius: 10px;
+}
+
+.card-header {
+    font-size: 1.9rem; /* Mărește fontul pentru header */
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.card-body {
+    height: 400px;
+    background-image: url('/Imagini/VS_Bg.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.card-title {
+    font-size: 1.3rem; /* Mărește fontul pentru titlu */
+    font-weight: bold; /* Text îngroșat */
+    margin-bottom: 0.5rem; /* Mică spațiere sub titlu */
+}
+
+.card-text {
+    font-size: 1.1rem; /* Mărește fontul pentru text */
+    margin-bottom: 8px;
+}
+
+.home-team {
+    margin-left: 125px;
+    height: 220px;
+    width: 185px;
+}
+
+.away-team {
+    margin-right: 125px;
+    height: 220px;
+    width: 185px;
+    object-fit: contain;
+    float: right;
+}
+
+.card-footer {
+    padding: 25px 7rem;
+}
+
+.custom-btn {
+    color: #fff;
+    border: 2px solid #000;
+    border-radius: 15px;
+    background-color: #ED1C24;
+}
+
+.custom-btn:hover {
+    background-color: #000;
+    color: #fff;
+}
+
+@media (max-width: 768px) {
+    .card-header {
+        font-size: 1.2rem; /* Ajustează fontul pentru header pe mobile */
+    }
+
+    .card-title, .card-text {
+        font-size: 1rem; /* Ajustează fontul pentru titlu și text pe mobile */
+    }
+    
+    .card-body {
+        padding: 1rem; /* Ajustează padding-ul pentru corpul cardului */
+    }
+}
+
+.footer-custom {
+    background-color: #000;
+    color: #fff;
+    padding: 20px 0;
+    margin-top: 50px;
+    height: 88px;
+    width: 100%;
+}
+
+.footer-custom .footer-left a {
+    color: #fff;
+    transition: color 0.3s ease;
+}
+
+.footer-custom .footer-left a:hover {
+    color: #ED1C24;
+}
+
+.footer-custom .footer-right a:first-child {
+    margin-right: 40px;
+}
+
+.footer-custom .footer-right a:hover {
+    text-decoration: none;
+}
+
+.first-image {
+    margin-right: 40px;
+}
+
+.footer-left {
+    text-align: left;
+    margin-left: 50px;
+}
+
+.footer-right {
+    text-align: right;
+}
+
+.p-copyrights {
+    font-size: 1rem;
+    color: grey;
+}
+
+@media (max-width: 768px) {
+    .footer-custom {
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 50px;
+        width: 100%;
+        margin-top: 75px;
+    }
+    .container {
+        margin-top: 155px;
+    }
+    .row {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .footer-container {
+        flex-direction: column;
+        text-align: center;
+        width: 100%; /* Asigură-te că container-ul se întinde pe toată lățimea */
+    }
+    .footer-left {
+        margin-left: 0px;
+    }
+    .footer-left, .footer-right {
+        text-align: center;
+        width: 100%; /* Asigură-te că fiecare coloană se întinde pe toată lățimea */
+    }
+    .footer-right a {
+        display: block; /* Face ca fiecare link să ocupe propria sa linie */
+        margin-bottom: 10px; /* Adaugă spațiu între link-uri */
+    }
+    .footer-right a:first-child {
+        margin-right: 0; /* Elimină margin-ul de la primul link */
+    }
+    .footer-left img {
+        margin-right: 0px;
+    }
+    .footer-right img {
+        margin-bottom: 20px;
+        margin-right: 0px;
+    }
 }
 
