--- a/SelectareLocuri/selectare_locuri.css
+++ b/SelectareLocuri/selectare_locuri.css
@@ -450,8 +450,91 @@ small, label {
     font-size: 14px;
 }
 
+.custom-btn:focus {
+    outline: none;
+    border: none;
+}
+
 .greyed-out {
     fill: #DDDDDD;
+}
+
+/* Pop-up modal styling */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 101;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    position: relative;
+    margin-top: -100px;
+}
+
+.close {
+    color: #666;
+    font-size: 28px;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Legend styling */
+.legend {
+    margin-bottom: 20px;
+}
+
+.legend-item {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.dot {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.available {
+    background-color: #ED1C24;
+}
+
+.occupied {
+    background-color: gray;
+}
+
+.unavailable {
+    background-color: #bbb;
+}
+
+  /* Seats container styling */
+.seats-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .footer-custom {
