--- a/Dashboard/acasa.css
+++ b/Dashboard/acasa.css
@@ -59,9 +59,56 @@ body {
 }
 
 .content {
+    margin-top: 25px;
     margin-left: 250px;
     padding: 20px;
-    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.card {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 302px;
+    height: 100px;
+    padding: 20px;
+    margin-bottom: 20px;
+    margin-right: 30px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.card-icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #ED1C24;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    margin-right: 20px;
+    font-size: 23px;
+}
+
+.card-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
+}
+.card-content h4 {
+    margin: 0;
+    font-size: 24px;
+    font-weight: bold;
+}
+.card-content p {
+    margin: 0;
+    color: #666;
+    font-size: 17px;
 }
 
 /* Dark mode styles */
@@ -89,4 +136,9 @@ body.dark-mode {
 
 body.dark-mode .sidebar .top-section img {
     filter: grayscale(100%);
+}
+
+body.dark-mode .content .card {
+    background-color: #171717;
+    color: #fff;
 }
