--- a/Autentificare/autentificare.css
+++ b/Autentificare/autentificare.css
@@ -67,3 +67,9 @@ a:hover {
     background-color: #000;
     color: #fff;
 }
+
+.custom-btn:active,
+.custom-btn:focus {
+    outline: none;
+    box-shadow: none;
+}
