--- a/Dashboard/grafice.css
+++ b/Dashboard/grafice.css
@@ -60,8 +60,36 @@ body {
 
 .content {
     margin-left: 250px;
+    margin-top: 25px;
     padding: 20px;
-    width: 100%;
+    width: calc(100% - 250px);
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding: 0 20px 45px;
+}
+
+.card {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card h5 {
+    margin-bottom: 35px;
+    text-align: center;
+}
+
+.card canvas {
+    max-width: 100%;
+    max-height: 300px;
 }
 
 /* Dark mode styles */
@@ -89,4 +117,9 @@ body.dark-mode {
 
 body.dark-mode .sidebar .top-section img {
     filter: grayscale(100%);
+}
+
+body.dark-mode .content .card {
+    background-color: #171717;
+    color: #fff;
 }
