--- a/Autentificare/autentificare.css
+++ b/Autentificare/autentificare.css
@@ -32,7 +32,7 @@ h2 {
 }
 
 .form-control:focus {
-    border-color: #000; /* Schimbă culoarea border-ului */
+    border-color: #000;
     box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.346);
 }
 
