--- a/Comanda/comanda.css
+++ b/Comanda/comanda.css
@@ -43,7 +43,7 @@ body {
 @media (min-width: 992px) {
     .logo-outside {
         position: absolute;
-        top: -8px; /* Ajustează dacă e necesar */
+        top: -8px;
         left: 2rem;
         z-index: 10;
     }
@@ -365,7 +365,7 @@ tbody tr:hover {
     }
     .footer-left, .footer-right {
         text-align: center;
-        width: 100%; /* Asigură-te că fiecare coloană se întinde pe toată lățimea */
+        width: 100%;
     }
     .footer-right a {
         display: block; /* Face ca fiecare link să ocupe propria sa linie */
