--- a/Finalizare/success.css
+++ b/Finalizare/success.css
@@ -43,7 +43,7 @@ body {
 @media (min-width: 992px) {
     .logo-outside {
         position: absolute;
-        top: -8px; /* Ajustează dacă e necesar */
+        top: -8px;
         left: 2rem;
         z-index: 10;
     }
@@ -247,14 +247,14 @@ h2, .success-p {
     .footer-container {
         flex-direction: column;
         text-align: center;
-        width: 100%; /* Asigură-te că container-ul se întinde pe toată lățimea */
+        width: 100%;
     }
     .footer-left {
         margin-left: 0px;
     }
     .footer-left, .footer-right {
         text-align: center;
-        width: 100%; /* Asigură-te că fiecare coloană se întinde pe toată lățimea */
+        width: 100%;
     }
     .footer-right a {
         display: block; /* Face ca fiecare link să ocupe propria sa linie */
