--- a/MeniuPrincipal/meniu_principal.css
+++ b/MeniuPrincipal/meniu_principal.css
@@ -256,14 +256,14 @@ body {
     .footer-container {
         flex-direction: column;
         text-align: center;
-        width: 100%; /* Asigură-te că container-ul se întinde pe toată lățimea */
+        width: 100%;
     }
     .footer-left {
         margin-left: 0px;
     }
     .footer-left, .footer-right {
         text-align: center;
-        width: 100%; /* Asigură-te că fiecare coloană se întinde pe toată lățimea */
+        width: 100%;
     }
     .footer-right a {
         display: block; /* Face ca fiecare link să ocupe propria sa linie */
