--- a/SelectareLocuri/selectare_locuri.css
+++ b/SelectareLocuri/selectare_locuri.css
@@ -724,14 +724,14 @@ small, label {
     .footer-container {
         flex-direction: column;
         text-align: center;
-        width: 100%; /* Asigură-te că container-ul se întinde pe toată lățimea */
+        width: 100%;
     }
     .footer-left {
         margin-left: 0px;
     }
     .footer-left, .footer-right {
         text-align: center;
-        width: 100%; /* Asigură-te că fiecare coloană se întinde pe toată lățimea */
+        width: 100%;
     }
     .footer-right a {
         display: block; /* Face ca fiecare link să ocupe propria sa linie */
